# longnamefs

./: CMakeLists.txt  COPYING  README.md
src/: longnamefs.c  sha256.c  sha256.h
